--- a/switch.yaml
+++ b/switch.yaml
@@ -1,7 +1,22 @@
 # Switches (mostly based on 433MHz/Pilight)
+- platform: tplink
+  host: 10.10.4.180
+#
 
 - platform: pilight
   switches:
+
+    Desk Electronics:
+      on_code:
+        protocol: brennenstuhl
+        systemcode: 31
+        unitcode: 3
+        'on': 1
+      off_code:
+        protocol: brennenstuhl
+        systemcode: 31
+        unitcode: 3
+        'off': 1
 
     Curtain Balls:
       on_code:
@@ -15,7 +30,7 @@
         unitcode: 2
         'off': 1
 
-    Kitchen Stereo:
+    kitchen_stereo:
       on_code:
         protocol: brennenstuhl
         systemcode: 30
@@ -27,7 +42,7 @@
         unitcode: 4
         'off': 1
 
-    Bedroom Stereo:
+    bedroom_stereo:
       on_code:
         protocol: brennenstuhl
         systemcode: 31
@@ -44,7 +59,6 @@
           protocol: kaku_switch
           id: 64048982
           unit: 15
-          state: on
           'on': 1
       off_code:
           protocol: kaku_switch
@@ -53,18 +67,11 @@
           state: off
           'off': 1
 
-    Christmas Star:
-      on_code:
-          protocol: kaku_switch
-          id: 64048982
-          unit: 14
-          state: on
-          'on': 1
-      off_code:
-          protocol: kaku_switch
-          id: 64048982
-          unit: 14
-          state: off
-          'off': 1
-
+- platform: flux
+  lights:
+    - light.trad_hall_back
+    - light.trad_hall_front
+  start_colortemp: 5500
+  name: 'Hallway_Fluxing'
+  mode: mired
 
